test/pos/adt_partial.msmt_
; Uninterpreted Sorts
(declare-sort List 1)
(declare-sort Vec 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((x Vec)(y Vec)(v1 Int)) (=> (and True (and True (= x y))) (= y x))))
