test/neg/adt3.msmt_
; Uninterpreted Sorts
(declare-sort List 1)
(declare-sort Vec 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((x Int)(xs (Vec Int))(l1 (Vec Int))(l3 (Vec Int))(v5 Int)) (=> (and True (and True (and (= l1 (mkCons x xs)) (and True (= l1 l3))))) (= mkNil (tail l3)))))
